WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314740
WebCore/platform: Use nullptr instead of 0 for pointer initialization
https://bugs.webkit.org/show_bug.cgi?id=314740
Summary
WebCore/platform: Use nullptr instead of 0 for pointer initialization
Vitor Roriz
Reported
2026-05-13 10:49:58 PDT
Mechanical sweep: replace legacy 0 with nullptr for pointer initialization across Source/WebCore/platform/.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-13 10:50:07 PDT
<
rdar://problem/176990368
>
Vitor Roriz
Comment 2
2026-05-13 11:01:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64852
EWS
Comment 3
2026-05-13 13:31:54 PDT
Committed
313189@main
(a1f9b136e8a5): <
https://commits.webkit.org/313189@main
> Reviewed commits have been landed. Closing PR #64852 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug