WebCore/platform: Use nullptr instead of 0 for pointer initialization https://bugs.webkit.org/show_bug.cgi?id=314740 rdar://176990368

Reviewed by Ryosuke Niwa.

* Source/WebCore/platform/ContextMenuItem.h:
* Source/WebCore/platform/graphics/ComplexTextController.h:
* Source/WebCore/platform/graphics/WidthIterator.h:
* Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLANGLE::getVertexAttribOffset):
* Source/WebCore/platform/graphics/avfoundation/objc/CDMSessionAVFoundationObjC.mm:
(WebCore::CDMSessionAVFoundationObjC::generateKeyRequest):
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:
* Source/WebCore/platform/graphics/opentype/OpenTypeVerticalData.cpp:
(WebCore::OpenType::GSUBTable::feature const):
* Source/WebCore/platform/graphics/transforms/TransformationMatrix.h:
* Source/WebCore/platform/graphics/win/FontCacheWin.cpp:
(WebCore::FontCache::systemFallbackForCharacterCluster):
* Source/WebCore/platform/graphics/win/GraphicsContextWin.cpp:
(WebCore::GraphicsContext::getWindowsContext):
* Source/WebCore/platform/graphics/win/cairo/GraphicsContextWinCairo.cpp:
(WebCore::createCairoContextWithHDC):
* Source/WebCore/platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
(WebCore::JPEGImageReader::JPEGImageReader):
* Source/WebCore/platform/ios/wak/WebCoreThreadRun.cpp:
* Source/WebCore/platform/win/ClipboardUtilitiesWin.h:
* Source/WebCore/platform/win/cairo/DragImageWinCairo.cpp:
(WebCore::createDragImageFromImage):

Canonical link: https://commits.webkit.org/313189@main